--- a/1-csharp/RestaurantReviews/RRBL/RRBL.csproj
+++ b/1-csharp/RestaurantReviews/RRBL/RRBL.csproj
@@ -2,14 +2,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RRModels\RRModels.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\RRBL\RRBL.csproj" />
+    <ProjectReference Include="..\RRDL\RRDL.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
